--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+html,body,app-root,.site{
+    width:100%;
+    height: 100%;
+    margin: 0;
+}
+
+.site{
+    display: flex;
+    flex-direction: column;
+}
+
+main{
+    flex:1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-between;
+    align-items: center;
+}
+
+header{
+    background-color: green;
+}
+
+footer{
+    background-color: blue;
+}
+
+main div{
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    margin: 10px;
+}
+
+.box{
+    width:200px;
+    height:200px;
+}
