add material ui

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,5 @@
-<p>
-  footer works!
-</p>
+<md-toolbar color="primary">
+  <span class="fill-remaining-space"></span>
+  <span> &copy; dravenxiaokai 2017 </span>
+  <span class="fill-remaining-space"></span>
+</md-toolbar>
