--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-html,body,app-root,.site{
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+html,body,app-root,md-sidenav-container,.site{
     width:100%;
     height: 100%;
     margin: 0;
@@ -12,30 +14,8 @@ html,body,app-root,.site{
 
 main{
     flex:1;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: space-between;
-    align-items: center;
 }
 
-header{
-    background-color: green;
-}
-
-footer{
-    background-color: blue;
-}
-
-main div{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    margin: 10px;
-}
-
-.box{
-    width:200px;
-    height:200px;
+.fill-remaining-space{
+    flex:1 1 auto;
 }
