--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <md-sidenav-container>
-  <md-sidenav #sidenav mode="side">
+  <md-sidenav #sidenav mode="over">
     <app-sidebar></app-sidebar>
   </md-sidenav>
   <div class="site">
