--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,17 +1,35 @@
-<md-card>
-  <md-card-header>
-    <md-card-title>登录：</md-card-title>
-  </md-card-header>
-  <md-card-content>
-    <md-input-container align="end" color="accent" floatPlaceholder="float">
-      <span mdPrefix>wang</span>
-      <input mdInput type="email" placeholder="您的email">
-      <span mdSuffix>@gmail.com</span>
-      <md-hint>必填项</md-hint>
-    </md-input-container>
-  </md-card-content>
-  <md-card-actions align="start">
-    <p>还没有账户？<a href="">注册</a></p>
-    <p>忘记密码？<a href="">找回</a></p>
-  </md-card-actions>
-</md-card>
+<form>
+  <md-card>
+    <md-card-header>
+      <md-card-title>登录：</md-card-title>
+    </md-card-header>
+    <md-card-content>
+      <md-input-container class="full-width">
+        <input mdInput type="email" placeholder="您的email">
+      </md-input-container>
+      <md-input-container class="full-width">
+        <input mdInput type="password" placeholder="您的密码">
+      </md-input-container>
+      <button md-raised-button type="button">登录</button>
+    </md-card-content>
+    <md-card-actions class="text-right">
+      <p>还没有账户？<a href="">注册</a></p>
+      <p>忘记密码？<a href="">找回</a></p>
+    </md-card-actions>
+  </md-card>
+
+  <md-card>
+    <md-card-header>
+      <md-card-title>
+        每日佳句
+      </md-card-title>
+      <md-card-subtitle>
+        满足感在于不断的努力，而不是现有成就。全心努力定会胜利满满。
+      </md-card-subtitle>
+    </md-card-header>
+    <img md-card-image src="/assets/quote_fullback.jpg" alt="">
+    <md-card-content>
+      Satisfaction is the constant effort, not the existing achievement. Wholeheartedly will be full of victory.
+    </md-card-content>
+  </md-card>
+</form>
